# grsh

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  grshrc.example  shell
src/: main.rs
src/completion/: autosuggest.bak  mod.rs
src/config/: grshrc.rs  mod.rs
src/shell/: alias.rs  builtins.rs  config.rs  exec.rs  mod.rs  prompt.rs  repl.rs  state.rs  syntax.rs  terminal.rs
