[package]
name = "grsh"
version = "0.1.1"
edition = "2021"

[dependencies]
rustyline = "14"
nix = { version = "0.27", features = ["process","signal", "term"] }
reedline = "0.34.0" # O l'ultima versione disponibile
nu-ansi-term = "0.50.3"
dirs = "5.0.1"
strsim = "0.11"
lazy_static = "1.4"
glob = "0.3.1"
rustyline-derive = "0.7.0"
meval = "0.2"
signal-hook = "0.3"
